WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267340
[WGSL] shader,execution,expression,call,builtin,radians:* is failing
https://bugs.webkit.org/show_bug.cgi?id=267340
Summary
[WGSL] shader,execution,expression,call,builtin,radians:* is failing
Tadeu Zagallo
Reported
2024-01-10 07:37:20 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-10 07:37:41 PST
<
rdar://problem/120784203
>
Tadeu Zagallo
Comment 2
2024-01-10 07:39:01 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22591
EWS
Comment 3
2024-01-11 00:41:09 PST
Committed
272899@main
(4ef5f1d14035): <
https://commits.webkit.org/272899@main
> Reviewed commits have been landed. Closing PR #22591 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug