[WGSL] shader,execution,expression,call,builtin,radians:* is failing https://bugs.webkit.org/show_bug.cgi?id=267340 rdar://120784203

Reviewed by Mike Wyrzykowski.

We should divide Pi by 180 first to avoid overflowing in certain edge cases.

* Source/WebGPU/WGSL/ConstantFunctions.h:
(WGSL::UNARY_OPERATION):

Canonical link: https://commits.webkit.org/272899@main